<resources>
    <string name="app_name">SuperWordBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">超级单词本</string>
    <string name="nav_header_subtitle">超小超好用的单词翻译软件</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">翻译</string>
    <string name="menu_gallery">单词本</string>
    <string name="menu_slideshow">收藏</string>
    <string name="menu_tools">统计</string>
    <string name="menu_share">分享</string>
    <string name="menu_send">联系作者</string>

    <string name="wait_input">请输入......</string>
    <string name="translate">翻译</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Welcome_use">欢迎使用</string>
    <string name="login_button">我是老用户</string>
    <string name="register_button">我是新用户</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="cancel_btn">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="register_wait_input_account">请设置账号...</string>
    <string name="register_wait_input_password">请设置密码...</string>
    <string name="confirm">确定</string>
    <string name="average">平均查找次数</string>

    <drawable name="touching">#FFD4FA39</drawable>
    <drawable name="unTouching">#FFEEFFA7</drawable>

    <string name="my_favor_tip">您还未添加任何收藏单词哦，快去查单词吧！</string>
    <string name="remove">移除</string>

    <string name="liao">廖鹏</string>
    <string name="sun">孙旺</string>
    <string name="note">欢迎联系我们！</string>
</resources>
