<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    tools:context=".ui.Login.loginFragments.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btn_register_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/cancel_btn"
        android:textColor="@color/ColorWhite"
        app:layout_constraintBottom_toBottomOf="@id/registerToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/registerToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registerToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/loginToolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:text="@string/register"
        android:textColor="@color/ColorWhite"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/registerToolbar"
        app:layout_constraintEnd_toEndOf="@+id/registerToolbar"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/account_register"
        android:layout_width="379dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:background="@color/ColorWhite"
        android:ems="10"
        android:hint="@string/register_wait_input_account"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerToolbar" />

    <Button
        android:id="@+id/btn_register_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:background="@color/login_btn_color"
        android:text="@string/confirm"
        android:textColor="@color/ColorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_register" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="371dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@color/ColorWhite"
        android:ems="10"
        android:hint="@string/register_wait_input_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_register" />

</androidx.constraintlayout.widget.ConstraintLayout>