<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login.loginFragments.RegisterActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_layout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/account_register"
        android:layout_width="396dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:background="?attr/colorBackgroundFloating"
        android:ems="10"
        android:hint="@string/register_wait_input_account"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="396dp"
        android:layout_height="54dp"
        android:layout_marginTop="1dp"
        android:background="?attr/colorBackgroundFloating"
        android:ems="10"
        android:hint="@string/register_wait_input_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_register"
        app:layout_constraintVertical_bias="0.229" />

    <Button
        android:id="@+id/btn_register_confirm"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="412dp"
        android:background="@color/login_btn_color"
        android:text="@string/confirm"
        android:textColor="@color/ColorWhite"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>